make Makefile more generic

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,8 @@
+SENSOR=am2315
+
 all:
-	gcc -Wall -c am2315.c -o am2315.o -lm
-	gcc -Wall am2315.o test.c -o test.o -lm
+	gcc -Wall -c $(SENSOR).c -o $(SENSOR).o -lm
+	gcc -Wall $(SENSOR).o test.c -o test.o -lm
 
 clean:
 	rm *.o > /dev/null 2>&1 &
